# adafruit_projects

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.md.license  convert_font  copy_project  lamp_timer.py  light_sensor_tft.py  mqtt_helper.py  pool_temperature_sensor.py  pyproject.toml  pyproject.toml.license  temperature_sensor.py
LICENSES/: MIT.txt
modules/: .gitignore  Makefile  aio_helper.py  battery_helper.py  mqtt_helper.py  power_helper.py  wifi_helper.py
projects/: circuitpython.toml  modules.toml  pool_temperature_sensor.toml  temperature_sensor.toml
projects/joystick/: config.toml  joystick.py
projects/lamp_timer/: config.toml  lamp_timer.py
projects/light_sensor/: config.toml  config_aio.toml  config_lp.toml  config_mqtt.toml  config_tft.toml  light_sensor.py  light_sensor_aio.py  light_sensor_lp.py  light_sensor_mqtt.py  light_sensor_tft.py
projects/pool_temperature_sensor/: config.toml  config_aio.toml  pool_temperature_sensor.py  pool_temperature_sensor_aio.py
projects/simple/: config.toml  config_ble_test.toml  hello_world.py  read_battery.py  test_ble.py
projects/temperature_sensor/: config.toml  config_aio.toml  config_ble_aio.toml  temperature_sensor.py  temperature_sensor_aio.py  temperature_sensor_ble_aio.py
src/project_helper/: clean_circuitpython_board.py  clean_debug_dir.py  common_parser.py  convert_font.py  copy_project.py  get_board_info.py  get_board_uid.py  get_circuitpython.py  project_handler.py  web_dev.py
